--- a/.github/workflows/deploy-notebook.yml
+++ b/.github/workflows/deploy-notebook.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         ORIGIN_HOST=${{ secrets.DATABRICKS_ORIGIN_HOST }}
         ORIGIN_TOKEN=${{ secrets.DATABRICKS_ORIGIN_TOKEN }}
-        NOTEBOOK_BASE="/Workspace/Users/ahuaccachi28@gmail.com/source_ntbk"
+        NOTEBOOK_BASE="/Workspace/Users/data_3iatlas_outlook.com@data3iatlasoutlook.on/source_ntbk"
         NOTEBOOKS=("ntbk_1" "ntbk_2")  # Agrega más según necesitesas
         mkdir -p notebooks_to_deploy
         for nb in "${NOTEBOOKS[@]}"; do
