tareas agregadas y configuradas segun secuencia

--- a/.github/workflows/deploy-notebook.yml
+++ b/.github/workflows/deploy-notebook.yml
@@ -17,8 +17,8 @@ jobs:
       run: |
         ORIGIN_HOST=${{ secrets.DATABRICKS_ORIGIN_HOST }}
         ORIGIN_TOKEN=${{ secrets.DATABRICKS_ORIGIN_TOKEN }}
-        NOTEBOOK_BASE="/Workspace/Users/data_3iatlas_outlook.com@data3iatlasoutlook.on/source_ntbk"
-        NOTEBOOKS=("ntbk_1" "ntbk_2")  # Agrega más según necesitesas
+        NOTEBOOK_BASE="/Workspace/Users/data_3iatlas_outlook.com@data3iatlasoutlook.onmicrosoft.com/source_ntbk"
+        NOTEBOOKS=("task_prepared" "task_ingesta" "task_transform" "task_load" "ntbk_2")  # Agrega más según necesitesas
         mkdir -p notebooks_to_deploy
         for nb in "${NOTEBOOKS[@]}"; do
           echo "Exportando $nb en modo raw..."
@@ -32,7 +32,7 @@ jobs:
       run: |
         DEST_HOST=${{ secrets.DATABRICKS_DEST_HOST }}
         DEST_TOKEN=${{ secrets.DATABRICKS_DEST_TOKEN }}
-        DEST_BASE="/py/scripts/main"
+        DEST_BASE="/ecommerce/scripts/main"
         for file in notebooks_to_deploy/*.py; do
           name=$(basename "$file" .py)
           dest_path="$DEST_BASE/$name"
@@ -59,7 +59,7 @@ jobs:
       run: |
         DEST_HOST=${{ secrets.DATABRICKS_DEST_HOST }}
         DEST_TOKEN=${{ secrets.DATABRICKS_DEST_TOKEN }}
-        WORKFLOW_NAME="WF_ADB"
+        WORKFLOW_NAME="WF_ECOMMERCE_SALES"
         
         echo "Verificando si existe el workflow: $WORKFLOW_NAME"
         
@@ -106,50 +106,111 @@ jobs:
           echo "CLUSTER_ID=$cluster_id" >> $GITHUB_ENV
         else
           echo "❌ No se encontró el cluster: $CLUSTER_NAME"
-          echo "Clusters disponibles:"
+          echo "porcedemos a disponibilizar el cluster ... recuerda que esto puede tomar entre 3 a 5 minutos"
           echo "$clusters_response" | jq -r '.clusters[]? | .cluster_name'
           exit 1
+          
         fi
     
-    - name: Create Databricks Workflow WF_ADB
+    - name: Create Databricks Workflow $WORKFLOW_NAME
       run: |
         DEST_HOST=${{ secrets.DATABRICKS_DEST_HOST }}
         DEST_TOKEN=${{ secrets.DATABRICKS_DEST_TOKEN }}
         DEST_BASE="/py/scripts/main"
         CLUSTER_ID="${{ env.CLUSTER_ID }}"
         
-        echo "Creando workflow: WF_ADB con cluster existente ID: $CLUSTER_ID"
+        echo "Creando workflow: $WORKFLOW_NAME con cluster existente ID: $CLUSTER_ID"
         
         # Crear el JSON del workflow usando cluster existente
         cat > workflow_config.json << EOF
         {
-          "name": "WF_ADB",
+          "name": "$WORKFLOW_NAME",
           "format": "MULTI_TASK",
+          "parameters": [
+            {
+              "name": "catalog",
+              "default": "prod_ecommerce"
+              },
+            {
+              "name": "storage_account",
+              "default": "adlsecommerce"
+            }
+          ]
           "tasks": [
             {
-              "task_key": "tarea1_notebook1",
-              "description": "Ejecuta notebook ntbk_1",
+              "task_key": "tarea1_prepared",
+              "description": "Ejecuta notebook ntbk_prepared para aprovicionar catalogo",
               "notebook_task": {
-                "notebook_path": "/py/scripts/main/ntbk_1",
-                "source": "WORKSPACE"
+                "notebook_path": "/ecommerce/scripts/main/task_prepared",
+                "source": "WORKSPACE",
+                "base_parameters": {
+                  "storageLocation": "storage"
+                }
               },
               "existing_cluster_id": "$CLUSTER_ID",
               "timeout_seconds": 3600,
               "max_retries": 2
             },
             {
-              "task_key": "tarea2_notebook2",
-              "description": "Ejecuta notebook ntbk_2",
+              "task_key": "tarea2_ingested",
+              "description": "Ejecuta notebook ntbk_ingesta carga de los blobs a bronze",
               "notebook_task": {
-                "notebook_path": "/py/scripts/main/ntbk_2",
-                "source": "WORKSPACE"
+                "notebook_path": "/ecommerce/scripts/main/task_ingesta",
+                "source": "WORKSPACE",
+                "base_parameters": {
+                  "inputPath": "/data/input",
+                  "outputPath": "/data/output",
+                  "processDate": "$(date +%Y-%m-%d)"
+                }
               },
               "existing_cluster_id": "$CLUSTER_ID",
               "timeout_seconds": 3600,
               "max_retries": 2,
               "depends_on": [
                 {
-                  "task_key": "tarea1_notebook1"
+                  "task_key": "tarea1_prepared"
+                }
+              ]
+            },
+            {
+              "task_key": "tarea3_transform",
+              "description": "Ejecuta notebook ntbk_2 con parámetros",
+              "notebook_task": {
+                "notebook_path": "/ecommerce/scripts/main/task_transform",
+                "source": "WORKSPACE",
+                "base_parameters": {
+                  "inputPath": "/data/input",
+                  "outputPath": "/data/output",
+                  "processDate": "$(date +%Y-%m-%d)"
+                }
+              },
+              "existing_cluster_id": "$CLUSTER_ID",
+              "timeout_seconds": 3600,
+              "max_retries": 2,
+              "depends_on": [
+                {
+                  "task_key": "tarea2_ingested"
+                }
+              ]
+            },
+            {
+              "task_key": "tarea4_load",
+              "description": "Ejecuta notebook ntbk_2 con parámetros",
+              "notebook_task": {
+                "notebook_path": "/ecommerce/scripts/main/task_load",
+                "source": "WORKSPACE",
+                "base_parameters": {
+                  "inputPath": "/data/input",
+                  "outputPath": "/data/output",
+                  "processDate": "$(date +%Y-%m-%d)"
+                }
+              },
+              "existing_cluster_id": "$CLUSTER_ID",
+              "timeout_seconds": 3600,
+              "max_retries": 2,
+              "depends_on": [
+                {
+                  "task_key": "tarea3_transform"
                 }
               ]
             }
@@ -208,7 +269,7 @@ jobs:
       run: |
         DEST_HOST=${{ secrets.DATABRICKS_DEST_HOST }}
         DEST_TOKEN=${{ secrets.DATABRICKS_DEST_TOKEN }}
-        WORKFLOW_NAME="WF_ADB"
+        WORKFLOW_NAME="WF_ECOMMERCE_SALES"
         
         echo "🔍 Validando la configuración del workflow creado..."
         
@@ -243,6 +304,127 @@ jobs:
           exit 1
         fi
     
+    - name: Execute Workflow WF_ECOMMERCE_SALES
+      run: |
+        DEST_HOST=${{ secrets.DATABRICKS_DEST_HOST }}
+        DEST_TOKEN=${{ secrets.DATABRICKS_DEST_TOKEN }}
+        WORKFLOW_NAME="WF_ECOMMERCE_SALES"
+        
+        echo "🚀 Ejecutando workflow: $WORKFLOW_NAME"
+        
+        # Obtener job_id del workflow
+        workflows_list=$(curl -s -X GET \
+          -H "Authorization: Bearer $DEST_TOKEN" \
+          "$DEST_HOST/api/2.1/jobs/list")
+        
+        job_id=$(echo "$workflows_list" | jq -r --arg name "$WORKFLOW_NAME" '.jobs[]? | select(.settings.name == $name) | .job_id')
+        
+        if [ "$job_id" != "" ] && [ "$job_id" != "null" ]; then
+          echo "✅ Workflow encontrado con ID: $job_id"
+          
+          # Ejecutar el workflow
+          run_response=$(curl -s -X POST \
+            -H "Authorization: Bearer $DEST_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d "{\"job_id\": $job_id}" \
+            "$DEST_HOST/api/2.1/jobs/run-now")
+          
+          run_id=$(echo "$run_response" | jq -r '.run_id')
+          
+          if [ "$run_id" != "" ] && [ "$run_id" != "null" ]; then
+            echo "🎯 Workflow ejecutado exitosamente!"
+            echo "Run ID: $run_id"
+            echo "WORKFLOW_RUN_ID=$run_id" >> $GITHUB_ENV
+            echo "WORKFLOW_JOB_ID=$job_id" >> $GITHUB_ENV
+            
+            # Mostrar URL del workflow en ejecución
+            echo "🔗 URL del workflow: $DEST_HOST/jobs/$job_id/runs/$run_id"
+            
+          else
+            echo "❌ Error al ejecutar el workflow"
+            echo "Response: $run_response"
+            exit 1
+          fi
+        else
+          echo "❌ No se pudo encontrar el workflow para ejecutar"
+          exit 1
+        fi
+    
+    - name: Monitor Workflow Execution
+      run: |
+        DEST_HOST=${{ secrets.DATABRICKS_DEST_HOST }}
+        DEST_TOKEN=${{ secrets.DATABRICKS_DEST_TOKEN }}
+        RUN_ID="${{ env.WORKFLOW_RUN_ID }}"
+        JOB_ID="${{ env.WORKFLOW_JOB_ID }}"
+        
+        echo "📊 Monitoreando ejecución del workflow..."
+        echo "Job ID: $JOB_ID"
+        echo "Run ID: $RUN_ID"
+        
+        # Monitorear por máximo 10 minutos (600 segundos)
+        max_wait_time=600
+        wait_time=0
+        check_interval=30
+        
+        while [ $wait_time -lt $max_wait_time ]; do
+          # Obtener estado actual
+          run_status=$(curl -s -X GET \
+            -H "Authorization: Bearer $DEST_TOKEN" \
+            "$DEST_HOST/api/2.1/jobs/runs/get?run_id=$RUN_ID")
+          
+          state=$(echo "$run_status" | jq -r '.state.life_cycle_state')
+          result_state=$(echo "$run_status" | jq -r '.state.result_state // "RUNNING"')
+          
+          echo "⏱️  Estado actual: $state ($result_state) - Tiempo transcurrido: ${wait_time}s"
+          
+          # Mostrar progreso de las tareas
+          echo "$run_status" | jq -r '.tasks[]? | "  📋 " + .task_key + ": " + .state.life_cycle_state + " (" + (.state.result_state // "RUNNING") + ")"'
+          
+          case "$state" in
+            "TERMINATED")
+              if [ "$result_state" = "SUCCESS" ]; then
+                echo "🎉 ¡Workflow completado exitosamente!"
+                
+                # Mostrar resumen final
+                echo ""
+                echo "📈 Resumen de ejecución:"
+                echo "$run_status" | jq -r '.tasks[]? | "✅ " + .task_key + " → " + (.state.result_state // "SUCCESS")'
+                
+                # Obtener duración
+                start_time=$(echo "$run_status" | jq -r '.start_time')
+                end_time=$(echo "$run_status" | jq -r '.end_time')
+                if [ "$start_time" != "null" ] && [ "$end_time" != "null" ]; then
+                  duration=$((($end_time - $start_time) / 1000))
+                  echo "⏰ Duración total: ${duration} segundos"
+                fi
+                
+                exit 0
+              else
+                echo "❌ Workflow terminó con errores: $result_state"
+                echo "📋 Detalles de las tareas:"
+                echo "$run_status" | jq -r '.tasks[]? | "❌ " + .task_key + ": " + (.state.result_state // "UNKNOWN")'
+                exit 1
+              fi
+              ;;
+            "INTERNAL_ERROR"|"SKIPPED")
+              echo "❌ Workflow falló con estado: $state"
+              exit 1
+              ;;
+            *)
+              # Estados: PENDING, RUNNING, TERMINATING
+              echo "⏳ Workflow aún ejecutándose..."
+              ;;
+          esac
+          
+          sleep $check_interval
+          wait_time=$((wait_time + check_interval))
+        done
+        
+        echo "⚠️  Timeout: El workflow aún se está ejecutando después de $max_wait_time segundos"
+        echo "🔗 Verifica el estado en: $DEST_HOST/jobs/$JOB_ID/runs/$RUN_ID"
+        echo "ℹ️  El workflow seguirá ejecutándose en Databricks"
+        exit 0
+    
     - name: Clean up
       run: |
         rm -rf notebooks_to_deploy
@@ -250,14 +432,15 @@ jobs:
     
     - name: Done
       run: |
-        echo "🎉 ¡Despliegue completado exitosamente!"
+        echo "🎉 ¡Despliegue y ejecución completados exitosamente!"
         echo ""
-        echo "Resumen:"
-        echo "Notebooks desplegados: ntbk_1, ntbk_2"
-        echo "Workflow creado: WF_ADB"
-        echo "Tareas configuradas:"
+        echo "📊 Resumen:"
+        echo "✅ Notebooks desplegados: ntbk_1, ntbk_2"
+        echo "✅ Workflow creado: WF_ADB"
+        echo "✅ Tareas configuradas:"
         echo "   - tarea1_notebook1 (ntbk_1)"
         echo "   - tarea2_notebook2 (ntbk_2)"
-        echo "Cluster existente: cluster_SD configurado"
+        echo "✅ Cluster existente: cluster_SD configurado"
+        echo "🚀 Workflow ejecutado automáticamente"
         echo ""
-        echo "🔗 Accede a tu workspace de Databricks para ver el workflow en la sección 'Workflows'"
+        echo "🔗 Accede a tu workspace de Databricks para ver los resultados detallados"
